fix broken styles

--- a/src/app.css
+++ b/src/app.css
@@ -2,12 +2,31 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-html, body { @apply h-full overflow-hidden; }
+html,
+body {
+	@apply h-full overflow-hidden;
+}
 
 /*Tailwind stupid things*/
-h1 {@apply h1}
-h2 {@apply h2}
-h3 {@apply h3}
-h4 {@apply h4}
-h5 {@apply h5}
-h6 {@apply h6}
+h1 {
+	@apply h1;
+}
+h2 {
+	@apply h2;
+}
+h3 {
+	@apply h3;
+}
+h4 {
+	@apply h4;
+}
+h5 {
+	@apply h5;
+}
+h6 {
+	@apply h6;
+}
+
+.visible-card {
+	@apply card w-full border-[1px] p-4 border-surface-200-800 preset-filled-surface-100-900;
+}
